# IS-2020-prog-2-sem

./: .gitignore  README.md
homework1/: .gitignore  CMakeLists.txt  ClosedPolygonalChain.cpp  ClosedPolygonalChain.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  PolygonalChain.cpp  PolygonalChain.h  README.md  RegularPolygon.cpp  RegularPolygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  geometry.h  main.cpp
homework2/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  README.md  main.cpp
homework3/: CMakeLists.txt  README.md  main  main.cpp  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
homework4/: README.md  main.cpp  predicate.hpp
homework5/: CircularBuffer.hpp  README.md  main.cpp
homework6/: Instructions.cpp  Instructions.h  Options.cpp  Options.h  README.md  Solving.cpp  Solving.h  input.txt  main.cpp  output.txt
